--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
 		"browser-sync": "^2.29.3",
 		"gulp": "^4.0.2",
 		"gulp-clean-css": "^4.3.0",
+		"gulp-json-srv": "^1.2.0",
 		"gulp-postcss": "^9.0.1",
 		"gulp-sass": "^5.1.0",
+		"json-server": "^1.0.0-beta.3",
 		"sass": "^1.63.3",
 		"webpack": "^5.86.0",
 		"webpack-cli": "^5.1.4",
